@@ -1,5 +1,5 @@
 <Project name="SmartDao" fileversion="2.0" DefaultNamespace="Meebey.SmartDao" language="C#" clr-version="Net_2_0" ctype="DotNetProject">
-  <Configurations active="Debug">
+  <Configurations active="Release">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
       <Output directory="bin/debug" assemblyKeyFile="." assembly="Meebey.SmartDao" />
       <Build debugmode="True" target="Exe" />
@@ -26,11 +26,15 @@
     <File name="AnsiSqlProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="MSSqlProvider.cs" subtype="Code" buildaction="Compile" />
     <File name="ISqlProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="MySqlProvider.cs" subtype="Code" buildaction="Compile" />
+    <File name="SqliteProvider.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System.Data, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
     <ProjectReference type="Gac" localcopy="True" refto="Npgsql, Version=2.0.0.0, Culture=neutral, PublicKeyToken=5d8b90d52f46fda7" />
     <ProjectReference type="Gac" localcopy="True" refto="log4net, Version=1.2.9.0, Culture=neutral, PublicKeyToken=a5715cc6d5c3540b" />
+    <ProjectReference type="Gac" localcopy="True" refto="MySql.Data, Version=5.0.8.1, Culture=neutral, PublicKeyToken=20449f9ba87f7ae2" />
+    <ProjectReference type="Gac" localcopy="True" refto="Mono.Data.Sqlite, Version=2.0.0.0, Culture=neutral, PublicKeyToken=0738eb9f132ed756" />
   </References>
   <Deployment.LinuxDeployData generatePcFile="False" />
 </Project>
